// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterView renders 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
}

<footer
  class="c0"
/>
`;

exports[`FooterView renders with shadow = true 1`] = `
.c0 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

<footer
  class="c0"
/>
`;

exports[`FooterView renders with size = "minimal" 1`] = `
.c0 {
  padding: 0;
}

<footer
  class="c0"
/>
`;

exports[`FooterView renders with size = "small" 1`] = `
.c0 {
  padding: 0.7142857142857143rem 1.4285714285714286rem;
}

<footer
  class="c0"
/>
`;
